--- a/app/src/main/res/layout/fragment_pulses.xml
+++ b/app/src/main/res/layout/fragment_pulses.xml
@@ -13,6 +13,12 @@
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/time_pulses_edit_text"
+        android:hint="@string/time_read_pulse"
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/add_pusles_button"
         android:text="Добавить данные"
