--- a/app/src/main/res/layout/patients_item_recycler_view.xml
+++ b/app/src/main/res/layout/patients_item_recycler_view.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/fab_margin"
+        android:background="@drawable/side_nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        card_view:cardCornerRadius="25dp"
+        style="@style/MyCardViewStyle">
+
     <TextView
         android:id="@+id/patient_item_text_view"
+        android:gravity="center"
+        android:text="@string/add_pulses"
         android:textSize="@dimen/fab_margin"
-        android:layout_margin="@dimen/fab_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
